# braille-printer-app

./: .gitignore  CHANGES.md  INSTALL  Makefile.am  NOTICE  README.md  configure.ac
backend/: cups-brf.c
braille-printer-app/: .gitignore  NOTICE  brf-converts.c  brf-printer-app.1  brf-printer-app.c  brf-printer-app.service  brf-printer.h  generic-brf.c  readme.md
braille-printer-app/print-test/: test.html  test.txt
filter/: liblouis1.defs.gen.in
mime/: braille.convs.in  braille.types.in
